Add additional attributes and filtering options to drinks
