# src/main/kotlin/drink/api/model/CreateDrinkRequest.kt
@@ -5,4 +5,7 @@ import kotlinx.serialization.Serializable
 @Serializable
 data class CreateDrinkRequest(
     val name: String,
+    val milliliters: Int,
+    val alcoholPercentage: Double,
+    val packaging: DrinkPackagingDTO,
 )
