# src/main/kotlin/drink/api/model/DrinkDTO.kt
@@ -8,4 +8,14 @@ import java.util.UUID
 data class DrinkDTO(
     @Contextual val id: UUID,
     val name: String,
-)
+    val milliliters: Int,
+    val alcoholPercentage: Double,
+    val alcoholic: Boolean = alcoholPercentage > 0.0,
+    val packaging: DrinkPackagingDTO,
+) {
+    init {
+        require(alcoholPercentage in 0.0..100.0) {
+            "Alcohol percentage must be between 0 and 100"
+        }
+    }
+}
