# src/main/kotlin/drink/api/model/DrinkFiltersDTO.kt
@@ -1,0 +1,6 @@
+package de.okan.drink_and_snack_api.drink.api.model
+
+data class DrinkFiltersDTO(
+    val alcoholic: Boolean? = null,
+    val packagingDTO: DrinkPackagingDTO? = null,
+)
